--- a/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
+++ b/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
@@ -42,9 +42,10 @@ Philosophers tend to assume that motor representation is only an enabling condit
 Which events are joint actions?
 We shall argue that fully answering this question involves appeal to structures of motor representation.
 By contrast, 
-most philosophers and many (but not all) psychologists appear to assume that this question can be fully answered just in terms of a notion of shared (or `collective') intention.
-For an event to be a joint action is for it to be appropriately related to a shared intention.
-For comparison, one might also hold that for an event to be an (ordinary, individual) action is for it to be appropriately related to an intention.
+most philosophers and many (but not all) psychologists appear to assume that this question can be fully answered just in terms of a special kind of intention or structure of intention and knowledge often called a shared (or `collective') intention.
+On this widely held view, for an event to be a joint action is for it to be appropriately related to a shared intention.
+For comparison, in the case of ordinary, individual action 
+one might hold that for an event to be an action is for it to be appropriately related to an intention.
 This assumption immediately raises the question of what shared intention is.
 On this question several philosophers offer competing theories.
 It is striking, however, that few have challenged the assumption that for an event to be a joint action it must be appropriately related to a shared intention.
@@ -62,95 +63,116 @@ that recognising a constitutive role for motor representation in joint action ma
 
 
 \section{Social motor representation}
-We start from the premise that reciprocal agent-neutral motor representation sometimes enables joint action.
+We start from the premise that reciprocal agent-neutral motor representation enables some joint actions.
 This needs unpacking.
-A motor representation is \emph{agent-neutral} if it concerns an action which is not one’s own or, in the case of joint action, not entirely one’s own.
-Two or more motor representations are \emph{reciprocal} just if there is a single outcome which each motor representation represents.
+A representation (motor or not) is \emph{agent-neutral} if its content does not specify any agent or agents.
+To illustrate, agent neutral representations are sometimes found at the early stages of planning.
+Imagine that you and some friends are tasked with preparing a holiday.  
+You might first write down a plan of action without specifying who will act; the plan simply describes what is to be done.
+The plan  will eventually be implemented by you and your friends but the plan itself does not specify this and so it is agent-neutral.
+Of course the fact that this plan is your collective plan may be represented elsewhere; this fact may also be implicit in  the plan's being stapled to the door of your communal kitchen.
+The agent-neutrality of a representation does not require that the agents are nowhere specified, only that they are not specified in the content of the representation.\footnote{
+Strictly the following argument does not hinge on the agent-neutrality of representations.
+It is sufficient for our purposes that there are reciprocal motor representations which concern actions which are partly but not entirely the agent's own.
+In principle such representations could have contents which specify other agents or multiple agents.
+We focus on agent-neutral representations to simplify exposition.
+}
+Two or more agents have \emph{reciprocal} motor representations  just if there is a single outcome and each agent has a motor representation of that outcome.
 We shall use the term \emph{social} motor representation as an abbreviation for reciprocal agent-neutral motor representation.
 (Of course we cannot assume in advance of argument that reciprocal agent-neutral motor representations are social in any interesting sense;
 but we are using the term `social' in a non-standard way as an abbreviation, one that reflects our aim.)
-It is almost uncontroversial that social motor representations exist.
-The controversial part of the premise is the claim that such representations can enable joint action.
+So for two or more agents to have social motor representation is just for there to be a single outcome of which each agent has an agent-neutral motor representation.
 
-Our premise should not be interpreted as implying that social motor representation is involved in every joint action,
-nor that social motor representation is sufficient for joint action.
-The premise is just that social motor representation is among the factors enabling some joint actions.
+Our premise is just that social motor representation is among the factors enabling some joint actions.
+It does not follow that social motor representation is involved in every joint action,
+nor that the existence of social motor representation would be sufficient for there to be joint action.
+
+This premise is doubly controversial.
+While it is now well established both that there are motor representations of action outcomes (and not merely patterns of joint displacement, say), and also that there are motor representations of the outcomes of others' actions rather than only of one's own actions,
+less research has so far considered the conjecture that motor representations concern outcomes of actions which are partly but not entirely one's own.
+There is also relatively little evidence for the further conjecture that such representations enable some joint actions.
+We shall not argue for either conjecture; they are empirical premises.  
+What follows is speculative philosophy: an attempt to explain the consequences and significance of the conjecture that social motor representation enables some joint actions.
 
 Why accept the premise that social motor representation enables joint action?
-A direct way to test the premise would be
+A direct way to test the premise would be to 
 measure how (if at all) selective interventions on social motor representation affected agents’ performance of joint actions.
-As far as we know no one has done this and it is probably impossible.
+As far as we know no one has done this and it may be impractical.
 But there are some indirect findings.
-We shall focus on just one, a finding by Kourtis and colleagues that `Simulation of another person’s action, as reﬂected in the activation of motor cortices, gets stronger the more the other is perceived as an interaction partner’  \citep[p.\ 4]{kourtis:2010_favoritism}.
-This finding falls well short of providing conclusively support for the premise; we mention it as an illustration of the sort of evidence is relevant to the premise.
-
-Here’s the experiment they did.
-The task was simple: two people sat opposite each other.  Sometimes they acted alone, picking up and replacing an object.  And sometimes had to act together, passing an object between them.  Also present was the ‘loner’ who always acted alone.
+We shall focus on just one, which will serve to illustrate the premise (but does not provide a decisive reason to accept it).
+Kourtis and colleagues report that `[s]imulation of another person’s action, as reflected in the activation of motor cortices, gets stronger the more the other is perceived as an interaction partner’  \citep[p.\ 4]{kourtis:2010_favoritism}.
+To establish this they had two subjects sit opposite each other at a table; there was also a confederate at the table, the `loner'.  
+Sometimes the subjects acted alone, picking up and replacing an object.  And sometimes they had to act together, passing an object between them.  
+The loner always acted alone.
 EEG measurements of motor activation were recorded.
-The researchers found that patterns of activation for self and joint action partner were similar, and different from patterns of activation for the actions of the loner which were similar to patterns in a ‘no go’ condition where no one was to act.
-Since the researchers did not include a condition where there was a competitive, non-joint interaction, we cannot conclude that the modulation in action simulation they found is specific to joint action as opposed to other kinds of interaction.
-What we do take from this paper,
-together with a body of other research on motor simulation of action,
+The researchers compared patterns of motor activation in four conditions: when the first subject acted, when the second subject acted, when the loner acted and when there was a `no go' signal so that no one acted.
+They found that when one of the subjects acted, patterns of activation in each of the two subjects were similar regardless of which was acting and which was observing.
+By contrast, when the loner acted the subjects' patterns of activation resembled those found in the `no go' condition when there was no action.
+Since the researchers did not include a condition where there was a competitive, non-joint interaction, we cannot conclude that the effect they found is specific to joint action as opposed to other kinds of interaction.
+What we do take this paper to indicate, 
+together with a body of other research on motor representation of observed action,
 is this.
-If you are engaged in a joint action with someone, one which involves moving an object by passing it between you, then each of you has motor representations of the other’s actions and these motor representations are functionally equivalent to motor representations of your own actions in the sense that they are just the sorts of representation that might have caused you to do what the other is doing (if you were in her position).
+If you are engaged in a joint action with someone, one which involves moving an object by passing it between you, then each of you has motor representations of actions whose (perhaps improper) components include actions which will be performed by the other  and these motor representations are functionally equivalent to motor representations of your own actions in the sense that they are just the sorts of representation that might have caused you to do what the other is doing (if you were in her position).
+
+For each of the agents involved in a joint action to represent motorically actions whose (perhaps improper) components include the others' action is not yet for there to be social motor representation.
+For there to be social motor representation there must be an outcome (such as the movement of an object from one place to another) which each agent has an agent-neutral motor representation of.
+The experiment by \citet{kourtis:2010_favoritism} was not designed to distinguish
+a case in which each agent represents the outcome to which the  whole joint action is directed (in this case, the entire movement of the object)
+from
+a case in which 
+each agent represents separately outcomes to which each of the individual actions comprising the joint action (in this case, the several movements of the object each of which just one agent is responsible for).
+However we are making a leap and assuming (without argument) that in cases like that studied by Kourtis and colleagues, there is sometimes social motor representation.
+
 
 
 \section{How could social motor representation enable joint action?}
-Suppose that Kourtis et al are right that social motor representation is more likely to occur in joint action than when one is merely observing.
-It doesn't follow, of course, that social motor representation enables some joint actions (and nor do these researchers claim that it does).
+Suppose that social motor representation is present in some joint action contexts, and, inspired by \citet{kourtis:2010_favoritism}, that 
+social motor representations are more likely to occur in joint action than when one is merely observing.
+It doesn't follow, of course, that social motor representation enables some joint actions.
 But let us consider just the possibility that it might.
 How could social motor representation enable joint action even in principle?
 
 To answer this question
 let us take a step back and consider an individual action.
 Suppose an agent moves a mug from one place to another, passing in from her left hand to her right hand half way.
-It is a familiar idea that motor representations for planning and monitoring action involve an hierarchical structure,
-where there is a relatively abstract representation of an outcome that is progressively filled in.
+It is a familiar idea that motor planning, like planning generally, involves starting with relatively abstract representations of outcomes and gradually filling in details.
+We can capture this by supposing that 
+motor representations for planning and monitoring action involve a hierarchical structure of representations.
+At the top we might find a relatively abstract representation of an outcome, in this case of the movement of the object from one location to another.
+Action-relevant details are progressively filled in by representations at lower stages of the hierarchy. 
+Now in the action we are considering there is a need, even for the single agent, to coordinate the exchange between the two hands.
+How is this achieved? 
+We suppose that part of the answer involves the fact that planning for the movements of each hand is not done entirely independently.
+Rather there is a plan for the whole action
+and plans for the movements of each hand are components of this larger plan.
+It is in part because they are parts of a larger plan that the plan for one hand constrains and is constrained by the plan for the other hand.
 
-
-
-
-\section{Slide}
-I don’t suppose that this attempt to depict the hierarchy of motor representations involved in moving a mug with two hands is accurate.
-I’m only trying to illustrate two familiar ideas.
-One is that motor planning involves starting with relatively abstract representations of outcomes and filling in details.
-
-
-
-
-\section{Slide}
-The other is that there is a need, even for a single agent, to synchronize the exchange between the two hands.
 
 How is this relevant to the case of joint action?
-
-
-
-\section{Slide}
-In joint action the agents have the same goal, to move the object from there to here.
-
-
-
-\section{Slide}
-They also face a similar coordination problem, requiring a precisely timed swap
-
-
-
-\section{Slide}
-And Koutis et al’s findings (and others’ findings) suggest that the same planning in involved in the joint action case, almost up to the actual muscle contractions.
-That is, in the joint action situation each agent plans both agents’ actions as if they were the actions of a single agent.
-This may be what enables them to coordinate so well : each is able to plan her own actions in a way that meshes with the other agent’s actions because each agent is planning (and monitoring) both their actions almost as if a single agent were going to execute the whole action.
+In joint action the agents have the same goal, to move the object from one place to another.
+They also face a similar coordination problem, requiring a precisely timed swap from one hand to another.
+Now suppose (inspired by Koutis et al’s and others' findings) that the same planning is involved in the individual case (where one agent performs the whole action) and in the joint action case (where the action is distributed between two agents).
+The planning is the same almost up to the actual muscle contractions.
+How could this be helpful?
+Suppose the agents' planning processes are similar enough that, for a given context and problem, they will produce approximately the same plans.
+Then having each agent plan the whole joint action means that (i) each agent plans the other agent's action,
+(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action,
+and 
+(iii) each  agent's plans for their own action are constrained by their plans for the other agent's action.
+So what enables the two agents' plans to mesh is not that they represent each other's plans but more simply that they plan each other's actions as well as their own actions as if they were each about to do the whole thing themselves.
+Each agent is planning (and monitoring) both their actions almost as if a single agent were going to execute the whole action.
 And of course this is exactly what we want for small-scale joint action---we want two or more agents to act as one.
+This may be why the performance of dyads in joint actions often resembles the performance of individuals tasked with performing the whole action alone (*refs: Knoblich circles following task).
+
+So what is the difference between the individual and the joint case?  From the point of view of motor representation, the primary difference may be that in joint action there is a need to prevent execution of the parts of the action which are not one’s own.
+
+%Here then is the basic idea I take to be guiding Kourtis and others.
+%Coordination is sometimes achieved by having each agent’s motor system plan all of their actions; 
+%given some assumptions, this could be a way of making it likely that each will execute their part in the joint action in a way that meshes with the way the other agents execute their parts.
 
 
-
-\section{Slide}
-So what is the difference between the individual and the joint case?  From the point of view of motor representation, the primary difference may be that in joint action there is a need to inhibit execution of the parts of the action which are not one’s own.
-
-Here then is the basic idea I take to be guiding Kourtis and others.
-The idea is that coordination is sometimes achieved by having each agent’s motor system plan all of their actions; 
-given some assumptions, this could be a way of making it likely that each will execute their part in the joint action in a way that meshes with the way the other agents execute their parts.
-
-Now so far I’ve only been considering a possible role for social motor representation in enabling joint action.  
+\section{Grounding the purposiveness of joint action}
+So far we have only been considering a possible role for social motor representation in enabling joint action.  
 But I think the details already give us grounds for holding that motor representation has a role to play in explaining what joint action is.
 To see why,
 let’s go back to individual action for a moment again.
