submitted version of intention and motor representation; new mindreading minimal theory of mind version

--- a/intention motor representation with corrado sinigaglia/intention and motor action.ppr.r1.final.tex
+++ b/intention motor representation with corrado sinigaglia/intention and motor action.ppr.r1.final.tex
@@ -12,9 +12,9 @@
 \def \iauthor {}
 %\def \iauthor {S. Butterfill* \& C. Sinigaglia**
 %\\ 
-%**Department of Philosophy, University of Warwick
+%**Department of Philosophy, University of Warwick, UK
 %\\ 
-%***Dipartimento di Filosofia, Università degli Studi di Milano}
+%***Dipartimento di Filosofia, Università degli Studi di Milano, Italia}
 %\def \iemail{s.butterfill@warwick.ac.uk}
 %\date{}
 
@@ -22,9 +22,9 @@
 %\author{}
 \author {S. Butterfill* \& C. Sinigaglia**
 \\ 
-**Department of Philosophy, University of Warwick
+**Department of Philosophy, University of Warwick, UK
 \\ 
-***Dipartimento di Filosofia, Università degli Studi di Milano}
+***Dipartimento di Filosofia, Università degli Studi di Milano, Italia}
 \date{}
 
 
@@ -91,7 +91,6 @@ Our aim in this section is to show that motor representations differ from intent
 How in general can we identify or distinguish representational formats? Because representational formats are typically associated with characteristic performance profiles, it is sometimes possible to infer similarities and differences in representational format from similarities and differences in the processes in which representations feature. This works both for artefactual and mental representations.  To illustrate in terms of our earlier example, suppose that two people have representations of the same route but for one person the route is represented by a line on a map (so in a cartographic format) whereas the other person has a propositional representation of the route. Some transformations are likely to be easier for the person with the cartographic route representation (depending on the projection used, of course); examples include reversing the route, determining how many times a certain river is crossed and transforming the route into a sequence of compass bearings. Other transformations, such as turning the route into a list of salient landmarks, may be easier for the person with the propositional route description. So some patterns of difference in the two people's performances may be explained by the difference in the formats of their representations; and some similarities in performance profile may likewise be explained by sameness of format. If we did not already know that the two people's route representations involved different formats, we might infer this from the facility with which each performed various transformations of the route.
 
 Cognitive neuroscience frequently depends on inferences of just this type.
-\bf
 To illustrate, compare imagining seeing an object moving with actually seeing it move. For this comparison we need to distinguish two ways of imagining seeing. There is a way of imagining seeing which phenomenologically is something like seeing except that it does not necessarily involve being receptive to stimuli. This way of imagining seeing, sometimes called `sensory imagining', is commonly distinguished from cognitive ways of imagining seeing which might for example involve thinking about seeing \citep[§2.1]{Gendler:2011_imagination}.%
 \footnote{Note that we define this way of imagining seeing in terms of phenomenology and stipulate nothing about the processes and representations involved.  This is essential for our purposes, since we wish to consider evidence for conjectures about the format of representations it involves.}
 It is this way of imagining seeing an object move that we wish to compare with actually seeing an object move.  These two have similarities in characteristic performance profile.  For instance, whether an object can be seen all at once depends on its size and distance from the perceiver; strikingly, when subjects imagine seeing an object, whether they can imagine seeing it all at once depends in the same way on size and distance (\citealp{kosslyn:1978_measuring}; \citealp[p.\ 99ff]{kosslyn:1994_image}).  Also, how long it takes to imagine looking over an object depends on the object's subjective size in the same way that how long it would take to actually look over that object would depend on its subjective size \citep{kosslyn:1978_visual}.%
@@ -117,8 +116,6 @@ The hypothesis that visual and motor representations differ in format is consist
 So far we have been arguing that motor and visual representations differ in format.  Why suppose that motor representations also differ in format from intentions?  Contrast two ways of imagining taking a shot in basketball, one involving the phenomenologically action-like kind of imagination and the other involving a cognitive kind of imagination.  The contrast we require is roughly between the way a former player might imagine this and the way that someone who has only ever read about basketball might imagine it.  As we have seen, the way phenomenologically action-like imagination unfolds in time and the amount of effort it involves will depend on bio-mechanical, dynamical and postural constraints, among others. These constraints are closely related to those which govern actually performing such actions \citep{Jeannerod:2001yb}, and some can be altered by acquiring or losing motor expertise.  By contrast no such constraints would be expected always to apply where a cognitive kind of imagination is involved.  In line with the general strategy of inferring differences in format from differences in characteristic performance profile, we conclude that motor representations differ in format from those involved in cognitive kinds of imagination, which are plausibly propositional.
 
 But are we too hasty in concluding that motor and propositional representations differ in format?  It might be objected that their characteristic performance profiles are not so different, for in cognitive imagination the fact that an agent is imagining herself acting will mean that how she imagines the action unfolding will reflect constraints on what she can do. But while this will sometimes be the case, a cognitive kind of imagining need not involve imagining an action unfolding in a way consistent with one's actual abilities. What distinguishes the phenomenologically action-like form of imagination is that some bio-mechanical, dynamical and postural constraints are inescapable.  To make this vivid consider imagining reaching for a distant object.  If the object is manifestly far out of reach it will not normally be possible to do this using the phenomenologically action-like kind of imagination, whereas no such difficulty need occur where a cognitive kind of imagination is involved.  After all, where a cognitive kind of imagination is involved one might imagine having much longer limbs (or an entirely different body) whereas this cannot be achieved at will where the phenomenologically action-like kind of imagination is involved.  Finally, where there are constraints on a cognitive kind of imagination these are generally mediated by beliefs or suppositions about one's own abilities; it seems unlikely that this is true of the phenomenologically action-like kind of imagination.
-
-\rm
 
 To conclude that intention and motor representation are genuinely distinct phenomena it is not quite enough to know that motor representations are non-propositional, of course. In addition we must know that intentions are propositional. We take this claim to be a consequence of the role of intention in practical reasoning and of the fact that one can have intentions involving quantification and identity; for example, one can intend that one cross seven distinct bridges in 48 hours without yet specifying which bridges or hours.\footnote{ Of course some use the term `intention' for non-propositional representations involved in the execution and control of action.  This is a narrowly terminological issue.} 
 
@@ -168,11 +165,7 @@ But is this really possible? Someone might object that in appealing to imagining
 
 So far we have focused on imagining acting. We are not committed to claiming that demonstrative concepts can only refer to actions by deferring to motor representations involved in imagination. Given the parallels between the phenomenologically action-like kind of imagination and actually acting already discussed, it is plausible that demonstrative reference to action by deference to motor representation is made possible not just by experiences associated with imagining acting but also by experiences associated with actually acting.
 
-\bf
-
 Having an intention with such a demonstrative concept does not generally require imagining or actually acting at the time the intention is formed.  To see why, first note that many of the things we do are either things we have already done or else novel combinations of actions we have already performed, such as reaching, grasping and throwing.  Relatedly, motor representations of actions which, taken as a whole, are novel can often be built up from motor representations of familiar actions \citep[pp.\ 45-49]{rizzolatti_mirrors_2008}.  The second step in our proposal is similar to what one might say about demonstrative route concepts.  Someone encounters a map with a route marked on it.  Her experience of this route is necessary for her to acquire a demonstrative concept which refers to the route by deferring to the cartographic representation of it.  But once she has this demonstrative concept, she can use it on future occasions without fresh experiences of the route (although there may be some dependence on memory); and her use of this concept does not depend on the continued existence of the original representation of the route.  Similarly, on our view experience of action is necessary for the acquisition of demonstrative concepts of action such as concepts of grasping and reaching but, perhaps subject to requirements on memory, not for their continued use in practical thought. 
-
-\rm
 
 We have been arguing for the existence of demonstrative concepts which refer to actions by deferring to motor representations in order to solve the interface problem. As already stated, the interface problem is the problem of explaining how it is sometimes no accident that an intention and a motor representation specify matching outcomes despite differing in format. As long as we think of intentions and motor representations as having logically independent contents, it seems that fully solving the problem would require appeal to processes of translation linking intention with motor representation. But where intentions involve demonstrative action concepts, their contents are not necessarily logically independent of the contents of motor representations. For a demonstrative component of an intention may refer to an action by deferring to a motor representation. Where this happens, which actions the intention specifies is partially or wholly determined by the motor representation, and so the interface problem is solved.
 
@@ -182,14 +175,10 @@ Or is it? So far we have not distinguished between two aspects of action outcome
 In fact, there may be another way of explaining non-accidental matching with respect to what is to be acted on due to \citet[pp.\ 36-8, 44-5, 48-57]{Campbell:2002ge}. In outline, Campbell's idea is to note that intentions can refer to objects by means of perceptual demonstrative elements, and that perceptual and motor representations of objects may be sufficiently commensurate for a perceptually represented object to be reliably selected as a target for motor processes.  It would be consistent to hold both that a view like Campbell's correctly explains non-accidental matching of action outcomes with respect to what is to be acted on, and also that non-accidental matching with respect to ways of acting is explained by demonstrative action concepts which defer to motor representations. We shall leave open the question of whether non-accidental matching involves elements additional to those involved in the view we have been developing.  Our claim is just that a solution to the interface problem need not involve anything other than components of intentions which refer to actions by deferring to motor representations of action outcomes.
 }
 
-\bf 
-
 At this point we should acknowledge a complication.  Above we argued that experience is needed for the acquisition of demonstrative concepts of ways of acting but not for their continued use in practical reasoning.  This matters because forming an intention does not always involve newly experiencing a way of acting. However, things are more complicated concerning what to act on. Where an action involves particular things to be acted on, agents will not generally have past experiences of these.  Accordingly, demonstrative reference by deference to motor representation requires that some motor representations of particular targets for action are associated with experiences of those targets.  When we spontaneously intend to act on an object of which we have no previous experience (and perhaps in other cases too), our experience of that object would have to depend in part on motor representations of it.  There is indeed some evidence for the ubiquity of motor aspects of experience (and also evidence that motor representation does not always modulate how objects are experienced, but that is not relevant here).  For example, temporarily changing subjects' motor abilities by artificially extending their reach systematically affects their judgements of how far away objects are \citep{linkenauger:2009_effects, costantini2011tool}. Given that such judgements are based on experience,\footnote{
 It may be objected that these judgements could reflect non-experiential expectations; \citet[pp.\ 203-4]{witt:2011_action} reviews evidence against this possibility.
 } 
 this illustrates one way in which experience may be shaped in part by motor representation of objects.  There is also evidence that experiential judgements of size can be influenced by ability \citep[e.g.][]{witt2009kicking}.  It is plausible, then, that motor representation of objects modulates experiences of them.  This indicates that it is possible to refer not only to ways of acting by also to what to act on by deferring to motor representations.
-
-\rm
 
 Solving the interface problem may not always involve demonstrative concepts. What matters for solving the interface problem is deference, not demonstration. Suppose that someone acts on an intention to grasp the handle of a mug.  Suppose also that the outcome to which her action is directed, grasping the mug's handle, is specified by motor representations. As long as the concept of grasp involved in her intention refers by deferring to a motor representation of grasping, the two specifications of action outcomes (in intention and in motor representation) will not be independent and so the interface problem will be solved.
 
